decapod-reference/openstack/nova/Deployment_nova-api-metadata.yaml
# Source: nova/templates/deployment-api-metadata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova-api-metadata
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: nova
    application: nova
    component: metadata
spec:
  replicas: 3
  selector:
    matchLabels:
      release_group: nova
      application: nova
      component: metadata
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: nova
        application: nova
        component: metadata
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "645b0d7e28e8bdfbf61d768043382ec1b8d1ef241e239fdb7f2d4989a84e1727"
        configmap-etc-hash: "8607a03ac11d10e9c620096bbf2587ec28a3112a540104669275d986c8b47c0e"
    spec:
      serviceAccountName: nova-api-metadata
      securityContext:
        runAsUser: 42436
        runAsUser: 42436
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - nova
                  - key: application
                    operator: In
                    values:
                    - nova
                  - key: component
                    operator: In
                    values:
                    - metadata
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 30
      containers:
        - name: nova-api
          image: "deploy001:5000/stein/ubuntu-source-nova-api:taco-0.1.0"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          command:
            - /tmp/nova-api-metadata.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/nova-api-metadata.sh
                  - stop
          ports:
            - containerPort: 8775
          readinessProbe:
            tcpSocket:
              port: 8775
          livenessProbe:
            tcpSocket:
              port: 8775
            initialDelaySeconds: 30
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: nova-bin
              mountPath: /tmp/nova-api-metadata.sh
              subPath: nova-api-metadata.sh
              readOnly: true
            - name: nova-bin
              mountPath: /sbin/iptables
              subPath: fake-iptables.sh
              readOnly: true
            - name: nova-bin
              mountPath: /sbin/iptables-restore
              subPath: fake-iptables.sh
              readOnly: true
            - name: nova-bin
              mountPath: /sbin/iptables-save
              subPath: fake-iptables.sh
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/nova.conf
              subPath: nova.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/policy.yaml
              subPath: policy.yaml
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/api_audit_map.conf
              subPath: api_audit_map.conf
              readOnly: true
            - name: nova-etc
              # NOTE (Portdirect): We mount here to override Kollas
              # custom sudoers file when using Kolla images, this
              # location will also work fine for other images.
              mountPath: /etc/sudoers.d/kolla_nova_sudoers
              subPath: nova_sudoers
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/rootwrap.conf
              subPath: rootwrap.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/rootwrap.d/api-metadata.filters
              subPath: api-metadata.filters
              readOnly: true
            - name: pod-shared
              mountPath: /tmp/pod-shared
              readOnly: true

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: nova-bin
          configMap:
            name: nova-bin
            defaultMode: 0555
        - name: nova-etc
          secret:
            secretName: nova-etc
            defaultMode: 0444
        - name: pod-shared
          emptyDir: {}
