decapod-reference/openstack/nova/Deployment_nova-api-osapi.yaml
# Source: nova/templates/deployment-api-osapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova-api-osapi
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: nova
    application: nova
    component: os-api
spec:
  replicas: 3
  selector:
    matchLabels:
      release_group: nova
      application: nova
      component: os-api
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: nova
        application: nova
        component: os-api
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "645b0d7e28e8bdfbf61d768043382ec1b8d1ef241e239fdb7f2d4989a84e1727"
        configmap-etc-hash: "6dd669da4bb4683b6785fc7edbc56e22c4b06ceb821831a82deba42b29e635de"
    spec:
      serviceAccountName: nova-api-osapi
      securityContext:
        runAsUser: 42436
        runAsUser: 42436
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - nova
                  - key: application
                    operator: In
                    values:
                    - nova
                  - key: component
                    operator: In
                    values:
                    - os-api
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 30
      containers:
        - name: nova-osapi
          image: "deploy001:5000/stein/ubuntu-source-nova-api:taco-0.1.0"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          command:
            - /tmp/nova-api.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/nova-api.sh
                  - stop
          ports:
            - name: n-api
              containerPort: 8774
          readinessProbe:
            tcpSocket:
              port: 8774
          livenessProbe:
            tcpSocket:
              port: 8774
            initialDelaySeconds: 30
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: pod-var-nova
              mountPath: /var/lib/nova
            - name: nova-bin
              mountPath: /tmp/nova-api.sh
              subPath: nova-api.sh
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/nova.conf
              subPath: nova.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/policy.yaml
              subPath: policy.yaml
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/api_audit_map.conf
              subPath: api_audit_map.conf
              readOnly: true

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: pod-var-nova
          emptyDir: {}
        - name: nova-bin
          configMap:
            name: nova-bin
            defaultMode: 0555
        - name: nova-etc
          secret:
            secretName: nova-etc
            defaultMode: 0444
