decapod-reference/openstack/nova/Deployment_nova-conductor.yaml
# Source: nova/templates/deployment-conductor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova-conductor
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: nova
    application: nova
    component: conductor
spec:
  replicas: 3
  selector:
    matchLabels:
      release_group: nova
      application: nova
      component: conductor
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: nova
        application: nova
        component: conductor
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "645b0d7e28e8bdfbf61d768043382ec1b8d1ef241e239fdb7f2d4989a84e1727"
        configmap-etc-hash: "03a90bb38eecc1560384eb9330acebafe7510a92573f6e4f3b051c9e9462f09b"
    spec:
      serviceAccountName: nova-conductor
      securityContext:
        runAsUser: 42436
        runAsUser: 42436
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - nova
                  - key: application
                    operator: In
                    values:
                    - nova
                  - key: component
                    operator: In
                    values:
                    - conductor
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      containers:
        - name: nova-conductor
          image: "deploy001:5000/stein/ubuntu-source-nova-conductor:taco-0.1.0"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          readinessProbe:
            exec:
              command:
                - python
                - /tmp/health-probe.py
                - --config-file
                - /etc/nova/nova.conf
                - --service-queue-name
                - conductor
            initialDelaySeconds: 80
            periodSeconds: 90
            timeoutSeconds: 70
          livenessProbe:
            exec:
              command:
                - python
                - /tmp/health-probe.py
                - --config-file
                - /etc/nova/nova.conf
                - --service-queue-name
                - conductor
                - --liveness-probe
            initialDelaySeconds: 120
            periodSeconds: 90
            timeoutSeconds: 70
          command:
            - /tmp/nova-conductor.sh
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: nova-bin
              mountPath: /tmp/nova-conductor.sh
              subPath: nova-conductor.sh
              readOnly: true
            - name: nova-bin
              mountPath: /tmp/health-probe.py
              subPath: health-probe.py
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/nova.conf
              subPath: nova.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/policy.yaml
              subPath: policy.yaml
              readOnly: true

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: nova-bin
          configMap:
            name: nova-bin
            defaultMode: 0555
        - name: nova-etc
          secret:
            secretName: nova-etc
            defaultMode: 0444
