decapod-reference/openstack/nova/Deployment_nova-novncproxy.yaml
# Source: nova/templates/deployment-novncproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova-novncproxy
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: nova
    application: nova
    component: novnc-proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      release_group: nova
      application: nova
      component: novnc-proxy
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: nova
        application: nova
        component: novnc-proxy
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "645b0d7e28e8bdfbf61d768043382ec1b8d1ef241e239fdb7f2d4989a84e1727"
        configmap-etc-hash: "6dd669da4bb4683b6785fc7edbc56e22c4b06ceb821831a82deba42b29e635de"
    spec:
      serviceAccountName: nova-novncproxy
      securityContext:
        runAsUser: 42436
        runAsUser: 42436
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - nova
                  - key: application
                    operator: In
                    values:
                    - nova
                  - key: component
                    operator: In
                    values:
                    - novnc-proxy
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: nova-novncproxy
          image: "deploy001:5000/stein/ubuntu-source-nova-novncproxy:taco-0.1.0"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          readinessProbe:
            tcpSocket:
              port: 6080
            initialDelaySeconds: 30
          livenessProbe:
            tcpSocket:
              port: 6080
            initialDelaySeconds: 30
          command:
            - /tmp/nova-console-proxy.sh
          ports:
            - name: n-novnc
              containerPort: 6080
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: nova-bin
              mountPath: /tmp/nova-console-proxy.sh
              subPath: nova-console-proxy.sh
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/nova.conf
              subPath: nova.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: pod-usr-share-novnc
              mountPath: /usr/share/novnc
              readOnly: true
            - name: pod-shared
              mountPath: /tmp/pod-shared

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: nova-bin
          configMap:
            name: nova-bin
            defaultMode: 0555
        - name: nova-etc
          secret:
            secretName: nova-etc
            defaultMode: 0444
        - name: pod-usr-share-novnc
          emptyDir: {}
        - name: pod-shared
          emptyDir: {}
