decapod-reference/openstack/nova/Deployment_nova-placement-api.yaml
# Source: nova/templates/deployment-placement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova-placement-api
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: nova
    application: nova
    component: placement
spec:
  replicas: 3
  selector:
    matchLabels:
      release_group: nova
      application: nova
      component: placement
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: nova
        application: nova
        component: placement
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "645b0d7e28e8bdfbf61d768043382ec1b8d1ef241e239fdb7f2d4989a84e1727"
        configmap-etc-hash: "6dd669da4bb4683b6785fc7edbc56e22c4b06ceb821831a82deba42b29e635de"
    spec:
      serviceAccountName: nova-placement-api
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - nova
                  - key: application
                    operator: In
                    values:
                    - nova
                  - key: component
                    operator: In
                    values:
                    - placement
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 30
      containers:
        - name: nova-placement-api
          image: "deploy001:5000/stein/ubuntu-source-nova-placement-api:taco-0.1.0"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          command:
            - /tmp/nova-placement-api.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/nova-placement-api.sh
                  - stop
          ports:
            - name: p-api
              containerPort: 8778
          readinessProbe:
            #NOTE(portdirect): use tcpSocket check as HTTP will return 401
            tcpSocket:
              port: 8778
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8778
            initialDelaySeconds: 50
            periodSeconds: 10
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: wsgi-nova
              mountPath: /var/www/cgi-bin/nova
            - name: nova-bin
              mountPath: /tmp/nova-placement-api.sh
              subPath: nova-placement-api.sh
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/nova.conf
              subPath: nova.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/policy.yaml
              subPath: policy.yaml
              readOnly: true
            - name: nova-etc
              mountPath: /etc/apache2/conf-enabled/wsgi-nova-placement.conf
              subPath: wsgi-nova-placement.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/apache2/conf-enabled/security.conf
              subPath: security.conf
              readOnly: true

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: wsgi-nova
          emptyDir: {}
        - name: nova-bin
          configMap:
            name: nova-bin
            defaultMode: 0555
        - name: nova-etc
          secret:
            secretName: nova-etc
            defaultMode: 0444
