decapod-reference/openstack/nova/StatefulSet_nova-compute-ironic.yaml
# Source: nova/templates/statefulset-compute-ironic.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nova-compute-ironic
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: nova
    application: nova
    component: compute
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: nova
      application: nova
      component: compute
  serviceName: "ironic-api-compute"
  template:
    metadata:
      labels:
        release_group: nova
        application: nova
        component: compute
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "645b0d7e28e8bdfbf61d768043382ec1b8d1ef241e239fdb7f2d4989a84e1727"
        configmap-etc-hash: "03a90bb38eecc1560384eb9330acebafe7510a92573f6e4f3b051c9e9462f09b"
        
    spec:
      serviceAccountName: nova-compute-ironic
      securityContext:
        runAsUser: 42436
        runAsUser: 42436
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - nova
                  - key: application
                    operator: In
                    values:
                    - nova
                  - key: component
                    operator: In
                    values:
                    - compute-ironic
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      securityContext:
        runAsUser: 0
      hostNetwork: true
      hostPID: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: nova-compute-ironic
          image: "deploy001:5000/stein/ubuntu-source-nova-compute-ironic:taco-0.1.0"
          imagePullPolicy: IfNotPresent
          
          command:
            - /tmp/nova-compute-ironic.sh
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: nova-bin
              mountPath: /tmp/nova-compute-ironic.sh
              subPath: nova-compute-ironic.sh
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/nova.conf
              subPath: nova.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/nova-ironic.conf
              subPath: nova-ironic.conf
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: nova-etc
              mountPath: /etc/nova/policy.yaml
              subPath: policy.yaml
              readOnly: true
            - name: varlibironic
              mountPath: /var/lib/ironic

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: nova-bin
          configMap:
            name: nova-bin
            defaultMode: 0555
        - name: nova-etc
          secret:
            secretName: nova-etc
            defaultMode: 0444
        - name: varlibironic
          hostPath:
            path: /var/lib/ironic
