decapod-reference/openstack/nova/Service_nova-novncproxy.yaml
# Source: nova/templates/service-novncproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: nova-novncproxy
spec:
  ports:
  - name: n-novnc
    port: 6080
    
    nodePort: 30608
    
  selector:
    release_group: nova
    application: nova
    component: novnc-proxy
  
  type: NodePort
